<resources>
    <string name="app_name">Fininfocom Tests</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="sort_by_age">Sort By Age</string>
    <string name="sort_by_city">Sort By City</string>
    <string name="year_old">%d Year Old</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="apologized_invalid_username">Apologized, Invalid Username</string>
    <string name="password">Password</string>
    <string name="apologized_invalid_password">Apologized, Invalid Password</string>
</resources>